--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/src/css/main.css">
     <title>VRM03</title>
 </head>
 <body>
-    <h1>HELLO WORLD</h1>
+    <h1>HELLO WORLD , your website open soon !</h1>
 </body>
 </html>
